<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="about_app_info">Appens version: %1$s</string>
	<string name="about_para1">Det här en sångbok främst avsedd för studenter vid <a href="http://www.insektionen.se">Sektionen för Informations- och Nanoteknik</a> på Kungliga Tekniska Högskolan i Kista. Sångerna är utvalda och korrekturlästa av frivilliga.</string>
	<string name="about_para2">Både appen och sångerna är öppen källkod; du kan hämta källkoden, rapportera buggar och lämna synpunkter på <a href="https://github.com/wsv-accidis/in-sangbok">GitHub</a>. Appen är utvecklad av <a href="http://se.linkedin.com/in/wilhelmsvenselius">Wilhelm Svenselius</a>.</string>
	<string name="about_para3">Om du vill lägga till sånger eller rätta något fel, <a href="https://github.com/wsv-accidis/in-sangbok/blob/master/README.md">läs mer här om hur du kan bidra</a>.</string>
	<string name="about_songbook_info">Laddad sångbok: %1$s (uppdaterad %2$s)</string>
	<string name="about_songbook_source">Källa: %1$s</string>

	<string name="app_name">IN-sektionens sångbok</string>
	<string name="app_short_name">IN-sångbok</string>

	<string name="navigation_drawer_close">Stäng navigation</string>
	<string name="navigation_drawer_open">Öppna navigation</string>
	<string name="nav_list_songs">Sök/lista sånger</string>
	<string name="nav_selection">Välj sångbok</string>
	<string name="nav_about">Om appen</string>

	<string name="repository_error_unspecified_network">Det gick inte att kontakta servern. Kontrollera att du har nätåtkomst och försök sedan igen.</string>
	<string name="repository_error_unspecified_protocol">Sångboken kunde inte hämtas. Försök igen. Kontrollera att du har nätåtkomst och försök sedan igen. Om felet kvarstår, kontakta utvecklaren.</string>
	<string name="repository_error_xml_parse_error">Sångboken kunde inte läsas in. Kontrollera att du har nätåtkomst och att du har senaste versionen av appen. Försök sedan igen. Om felet kvarstår, kontakta utvecklaren.</string>

	<string name="song_melody">Melodi:</string>
	<string name="song_melody_composer_format">%1$s (%2$s)</string>

	<string name="selection_para1">Du kan välja mellan olika sångböcker att ladda i appen. Dessa har varierande urval och kan vara sammanställda av olika personer. Observera att för andra sångböcker än standard tar apputvecklaren inget ansvar för innehållet.</string>
	<string name="selection_songbook_default">Sångbok från wsv-accidis/in-sangbok (standard)</string>
	<string name="selection_songbook_insektionen">Sångbok från insektionen/songlist</string>

	<string name="songbook_filter_category">Filtrera kategori</string>
	<string name="songbook_list_empty">Inget funnet.</string>
	<string name="songbook_search_hint">Sök namn eller text</string>
	<string name="songbook_search_hint_with_category_format">Sök i \'%1$s\'</string>
	<string name="songbook_show_all">Visa alla</string>

	<string-array name="quotes_list">
		<item>Ååååååååh TEMPO!|Alla, hela tiden</item>
	</string-array>
</resources>
