<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingBottom="@dimen/activity_vertical_margin">

		<TextView
			style="@style/AboutText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/selection_para1" />

		<RadioGroup
			android:id="@+id/selection_radiogroup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<RadioButton
				android:id="@+id/selection_radio_default"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/selection_songbook_default" />

			<RadioButton
				android:id="@+id/selection_radio_insektionen"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/selection_songbook_insektionen" />
		</RadioGroup>

	</LinearLayout>
</ScrollView>
