<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:src="@drawable/ic_app"/>

		<TextView
			android:id="@+id/about_para1"
			style="@style/AboutText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_para1"/>

		<TextView
			android:id="@+id/about_para2"
			style="@style/AboutText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_para2"/>

		<TextView
			android:id="@+id/about_para3"
			style="@style/AboutText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_para3"/>

		<TextView
			android:id="@+id/about_songbook_info"
			style="@style/AboutText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/about_app_info"
			style="@style/AboutText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</ScrollView>